<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="textOk">OK</string>
  <string name="textYes">Yes</string>
  <string name="textNo">No</string>
  <string name="textApply">Apply</string>
  <string name="textCancel">Cancel</string>
  <string name="textClose">Close</string>
  <string name="textShare">Share</string>
  <string name="textNow">Now</string>
  <string name="textNotNow">Not Now</string>
  <string name="textReleaseDay">Release Day</string>
  <string name="textNew">New</string>
  <string name="textSelect">Select</string>
  <string name="textHide">Hide</string>
  <string name="textRemove">Remove</string>
  <string name="textEmptyResults">There were no results…</string>
  <string name="textSearchFor">Search</string>
  <string name="textTip">Tip:</string>
  <string name="textSeason">Season %1$d</string>
  <string name="textSpecials">Specials</string>
  <string name="textEpisode">Episode %1$d</string>
  <string name="textSeasonEpisode">S.%1$02d E.%2$02d</string>
  <string name="textSortBy">Sort by:</string>
  <string name="textNetwork">%1$s (%2$s)</string>
  <string name="textDiscoverFilterProviders" comment="Streaming service like Netflix, Disney+, Sky etc.">Streaming</string>
  <string name="textDiscoverFilterProvidersRegion">Available in %1$s</string>
  <string name="textDiscoverFilterProvidersError">Could not load the streaming services for your region.</string>
  <string name="textDiscoverFilterProvidersCount" translatable="false">%1$s + %2$d</string>
  <string name="textGenres">Genres:</string>
  <string name="textTba" translatable="false">TBA</string>
  <string name="textShows">Shows</string>
  <string name="textMovies">Movies</string>
  <string name="textLists">Lists</string>
  <string name="textMinutesShort">min</string>
  <string name="textNoDescription">Overview not available.</string>
  <string name="textPleaseWait">Please wait…</string>
  <string name="textRate">Rate</string>
  <string name="textLink">Link</string>
  <string name="textDisabled">Disabled</string>
  <string name="textRateSaved">Your rating has been saved.</string>
  <string name="textRateRemoved">Your rating has been removed.</string>
  <string name="textCopiedToClipboard" translatable="false">Copied to clipboard</string>
  <plurals name="textDays">
    <item quantity="one">%1$d days</item>
    <item quantity="other">%1$d days</item>
  </plurals>
  <string name="textSelectDate">Select Date</string>
  <string name="textDateSelectionTitle">Date Selection</string>
  <string name="textDateSelectionDescription">When did you watch it?</string>

  <string name="textFeedTrending">Trending</string>
  <string name="textFeedPopular">Popular</string>
  <string name="textFeedAnticipated">Anticipated</string>

  <plurals name="textEpisodesLeft" comment="Number of episodes left to see">
    <item quantity="one">%d left</item>
    <item quantity="other">%d left</item>
  </plurals>

  <string name="textPeople">People:</string>
  <string name="textDirecting">Directing</string>
  <string name="textDirector">Director</string>
  <string name="textWriting">Writing</string>
  <string name="textScreenplay">Screenplay</string>
  <string name="textMusic">Music</string>
  <string name="textActing">Acting</string>

  <string name="textAiredAlready">Aired</string>
  <string name="textAirsNow">Airs Now</string>

  <plurals name="textDaysToAir">
    <item quantity="one">Airs tomorrow</item>
    <item quantity="other">Airs in %d days</item>
  </plurals>

  <plurals name="textHoursToAir">
    <item quantity="one">Airs in 1 hour</item>
    <item quantity="other">Airs in %d hours</item>
  </plurals>

  <plurals name="textMinutesToAir">
    <item quantity="one">Airs now</item>
    <item quantity="other">Airs in %d minutes</item>
  </plurals>


  <string name="textToday">Today</string>
  <string name="textTomorrow">Tomorrow</string>
  <string name="textThisWeek">This Week</string>
  <string name="textNextWeek">Next Week</string>
  <string name="textThisMonth">This Month</string>
  <string name="textNextMonth">Next Month</string>
  <string name="textThisYear">This Year</string>
  <string name="textLater">Later</string>
  <string name="textYesterday">Yesterday</string>
  <string name="textLast7Days">Last 7 Days</string>
  <string name="textLast30Days">Last 30 Days</string>
  <string name="textLast90Days">Last 90 Days</string>

  <string name="textNewEpisodeAvailable">New episode is available now!</string>
  <string name="textNewEpisodeAvailableSoon">New episode will be available soon!</string>
  <string name="textNewSeasonAvailable">New season is available now!</string>
  <string name="textNewSeasonAvailableSoon">New season will be available soon!</string>
  <string name="textNewMovieAvailable">Movie has been released!</string>


  <string name="textAddToMyShows">Add to My Shows</string>
  <string name="textAddToMyMovies">Add to History</string>
  <string name="textAddToWatchlist">Add to Watchlist</string>
  <string name="textMoveToMyShows">Move to My Shows</string>
  <string name="textMoveToMyMovies">Move to History</string>
  <string name="textMoveToWatchlist">Move to Watchlist</string>
  <string name="textMoveToHidden">Move to Hidden</string>
  <string name="textRemoveFromMyShows">Remove from My Shows</string>
  <string name="textRemoveFromMyMovies">Remove from History</string>
  <string name="textRemoveFromWatchlist">Remove from Watchlist</string>
  <string name="textRemoveFromHidden">Remove from Hidden</string>
  <string name="textWatchlist">Watchlist</string>
  <string name="textWatchlistIncoming">Upcoming</string>
  <string name="textNewAlwaysAtTop">New episodes always first</string>


  <string name="menuPin">Pin to top</string>
  <string name="menuUnpin">Unpin from top</string>
  <string name="menuAddOnHold" comment="This is a button for Progress subsection. It will contain pending shows marked by user.">Pin to \'On Hold\'</string>
  <string name="menuRemoveOnHold" comment="This is a button for Progress subsection. It will contain pending shows marked by user.">Unpin from \'On Hold\'</string>
  <string name="menuCollection">Collection</string>

  <string name="errorGeneral">Oops… Something went wrong.\nPlease contact us if this keeps happening.</string>
  <string name="errorSeasonsNotLoaded">Please wait for seasons data to load.</string>
  <string name="errorEpisodeNotAired">This episode hasn\'t been aired yet.</string>
  <string name="errorCouldNotLoadDiscover">We could not load discover page at this moment.\nPlease contact us if this keeps happening.</string>
  <string name="errorMalformedShow">It looks like this show no longer exists in TMDB database or is a duplicate.\n\nTap \'OK\' to remove it from the app.</string>
  <string name="errorMalformedMovie">It looks like this movie no longer exists in TMDB database or is a duplicate.\n\nTap \'OK\' to remove it from the app.</string>
  <string name="errorCouldNotLoadShow">We could not load this show\'s details at this moment.\nPlease contact us if this keeps happening.</string>
  <string name="errorCouldNotLoadMovie">We could not load this movie\'s details at this moment.\nPlease contact us if this keeps happening.</string>
  <string name="errorCouldNotLoadSearchResults">We could not load search results at this moment.\nPlease contact us if this keeps happening.</string>
  <string name="errorNoInternetConnection">No Internet. Please check your connection.</string>
  <string name="errorCouldNotFindApp" translatable="false">Sorry, we could not find app on this device that could handle this link.</string>
  <string name="errorAccountListsLimitsReached" translatable="false">Sorry, you have reached your TMDB account limit for personal lists!\n\nPlease contact us if you need more assistance.</string>
  <string name="textPercentage">%1$d%%</string>
  <string name="textBackToTop">Back to top</string>
  <!-- Not translatable: a placeholder shown until a value loads, and the rating providers' own brand names. -->
  <string name="textPlaceholderDash" translatable="false">-</string>
  <string name="textRatingsTmdb" translatable="false">TMDB</string>
  <string name="textRatingsImdb" translatable="false">IMDb</string>
  <string name="textRatingsMetascore" translatable="false">Metascore</string>
  <string name="textRatingsRottenTomatoes" translatable="false">R. Tomatoes</string>
  <!-- A runtime and its unit; the unit itself is translated as textMinutesShort. -->
  <string name="textRuntimeMinutes" translatable="false">%1$d %2$s</string>

  <string name="textNotificationChannelGeneral">General info</string>
  <string name="textNotificationChannelGeneralDescription">General information and announcements</string>
  <string name="textNotificationChannelShows">TV show info</string>
  <string name="textNotificationChannelShowsDescription">Information related to your TV shows</string>
  <string name="textNotificationChannelEpisodes">Episode announcements</string>
  <string name="textNotificationChannelEpisodesDescription">Episode and season announcements</string>
  <string name="textNotificationChannelMovies">Movie announcements</string>
  <string name="textNotificationChannelMoviesDescription">Announcements about movies</string>
  <string name="textNotificationChannelSync">Sync &amp; backup</string>
  <string name="textNotificationChannelSyncDescription">Sync and backup notifications</string>
  <string name="textShareTitle">Share %1$s</string>
  <string name="textSyncWebDav">Sync</string>
</resources>
