<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/viewPersonDetailsFiltersRoot"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
>

  <com.google.android.material.chip.ChipGroup
    android:id="@+id/viewPersonDetailsFiltersChipGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spaceNormal"
    android:layout_marginBottom="@dimen/spaceTiny"
    android:paddingStart="@dimen/spaceNormal"
    android:paddingEnd="@dimen/spaceNormal"
    app:chipSpacingHorizontal="@dimen/spaceSmall"
    app:layout_behavior="xyz.stignarnia.uiBase.common.behaviour.ScrollableViewBehaviour"
    app:singleLine="true"
  >

    <com.google.android.material.chip.Chip
      android:id="@+id/viewPersonDetailsFiltersShowsChip"
      style="@style/ShelflyChip.Filter"
      android:text="@string/textShows"
      app:chipBackgroundColor="?colorSheetBackground"
    />

    <com.google.android.material.chip.Chip
      android:id="@+id/viewPersonDetailsFiltersMoviesChip"
      style="@style/ShelflyChip.Filter"
      android:text="@string/textMovies"
      app:chipBackgroundColor="?colorSheetBackground"
    />

    <com.google.android.material.chip.Chip
      android:id="@+id/viewPersonDetailsFiltersCollectionChip"
      style="@style/ShelflyChip.Filter"
      android:text="@string/menuCollection"
      app:chipBackgroundColor="?colorSheetBackground"
      tools:text="Collection"
    />

  </com.google.android.material.chip.ChipGroup>

</FrameLayout>
